# agentic-ai-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: architecture.md  getting_started.md
examples/: basic_workflow.py  custom_tools.py  mcp_server_example.py  multi_agent_workflow.py  quickstart.ipynb  quickstart_client.ipynb  quickstart_server.ipynb  server_example.py  simple_example.py  workflow_example.py
src/agentic_ai/: __init__.py
src/agentic_ai/agents/: __init__.py  math_agent.py  supervisor.py  text_agent.py
src/agentic_ai/config/: __init__.py
src/agentic_ai/core/: __init__.py  base_agent.py  state.py
src/agentic_ai/mcp/: __init__.py  bridge.py  client.py  server.py
src/agentic_ai/orchestration/: __init__.py  router.py  workflow.py
src/agentic_ai/tools/: __init__.py  base_tool.py  math_tools.py  registry.py
src/agentic_ai_mcp/: __init__.py  agentic.py  bridge.py  client.py  config.py  orchestrator.py  server.py  workflow.py
src/agentic_ai_mcp/agents/: __init__.py  math_agent.py  supervisor.py  text_agent.py
src/agentic_ai_mcp/config/: __init__.py  settings.py
src/agentic_ai_mcp/core/: __init__.py  base_agent.py  state.py  types.py
src/agentic_ai_mcp/mcp/: __init__.py  bridge.py  client.py  server.py
src/agentic_ai_mcp/orchestration/: __init__.py  router.py  workflow.py
src/agentic_ai_mcp/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/agentic_ai_mcp/server/: __init__.py  manager.py
src/agentic_ai_mcp/tools/: __init__.py  base_tool.py  math_tools.py  registry.py  text_tools.py
src/agentic_ai_mcp/utils/: __init__.py  retry.py
src/agentic_ai_mcp/workflows/: __init__.py  planning.py
tests/: __init__.py  conftest.py  test_agentic.py  test_bridge.py  test_client.py  test_config.py  test_integration.py  test_orchestrator.py  test_providers.py  test_server.py  test_workflow.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_registry.py  test_state.py  test_tools.py
